--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="com.thoughtworks"
           android:versionCode="1"
           android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.Holo.Light.NoActionBar">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme">
         <activity android:name="HomeActivity"
                   android:label="@string/app_name">
             <intent-filter>
