--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,13 @@
           android:versionCode="1"
           android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme">
-        <activity android:name="HomeActivity"
+        <activity android:name=".activities.HomeActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="ListByCountryActivity" android:label="List By"/>
+        <activity android:name=".activities.ListByCountryActivity" android:label="List By"/>
     </application>
 </manifest>
