--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,4 +13,6 @@
         </activity>
         <activity android:name=".activities.ListByCountryActivity" android:label="List By"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
