--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.ListByCountryActivity" android:label="List By"/>
+        <activity android:name=".activities.ListByCityActivity" android:label="List By"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
