--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,8 +11,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ListByCountryActivity" android:label="List By"/>
-        <activity android:name=".activities.ListByCityActivity" android:label="List By"/>
+        <activity android:name=".activities.ListByCountryActivity" android:label="Countries"/>
+        <activity android:name=".activities.ListByCityActivity" android:label="Cities"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
