--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
         </activity>
         <activity android:name=".activities.ListByCountryActivity" android:label="Countries"/>
         <activity android:name=".activities.ListByCityActivity" android:label="Cities"/>
+        <activity android:name=".activities.ListByOfficeActivity" android:label="Offices"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
