--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.thoughtworks"
           android:versionCode="1"
           android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="11" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme">
         <activity android:name=".activities.HomeActivity"
                   android:label="@string/app_name">
