--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name=".activities.ListByCountryActivity" android:label="Countries"/>
         <activity android:name=".activities.ListByCityActivity" android:label="Cities"/>
         <activity android:name=".activities.ListByOfficeActivity" android:label="Offices"/>
+        <activity android:name=".activities.OfficeSummaryActivity" android:label="Offices"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
