--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
         </activity>
         <activity android:name=".activities.AllCitiesActivity" android:label="Cities"/>
         <activity android:name=".activities.OfficeSummaryActivity" android:label="Offices"/>
+        <activity android:name=".activities.AdminSummaryActivity" android:label="Admins"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
