--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,13 +5,14 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="11"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme">
-        <activity android:name=".activities.HomeActivity"
+        <activity android:name=".activities.SplashScreenActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".activities.HomeActivity" android:label="Home"/>
         <activity android:name=".activities.ListCitiesActivity" android:label="Cities"/>
         <activity android:name=".activities.OfficePlaceSummaryActivity" android:label="Offices"/>
         <activity android:name=".activities.AdminSummaryActivity" android:label="Admins"/>
